--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,1 +1,44 @@
-{"name":"truss-frontend","version":"1.0.0","description":"AI-assisted truss design frontend","author":"Your Name","license":"MIT","type":"module","scripts":{"start":"vite","build":"vite build","preview":"vite preview","test":"vitest"},"dependencies":{"@mui/icons-material":"6.4.11","@mui/material":"6.4.11","plotly.js-dist":"3.0.1","react":"19.0.0","react-dom":"19.0.0"},"devDependencies":{"@types/react":"19.1.2","@types/react-dom":"19.1.2","@vitejs/plugin-react":"4.7.0","typescript":"4.9.5","vite":"6.3.4","vite-plugin-svgr":"4.3.0"},"browserslist":{"production":[">0.2%","not dead","not op_mini all"],"development":["last 1 chrome version","last 1 firefox version","last 1 safari version"]}}
+{
+  "name": "truss-frontend",
+  "version": "1.0.0",
+  "description": "AI-assisted truss design frontend",
+  "author": "Your Name",
+  "license": "MIT",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest"
+  },
+  "dependencies": {
+    "@mui/icons-material": "^6.4.11",
+    "@mui/material": "^6.4.11",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "plotly.js-dist": "^3.0.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.0.3",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5",
+    "vitest": "^0.34.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
+}
